fix: transition on switch and avoid layout shifting on card check

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,12 +4,11 @@
 @tailwind utilities;
 
 .toggle-checkbox:checked {
-  @apply: right-0 border-green-400;
-  right: 0;
+  @apply transform translate-x-4 border-green-400;
   border-color: #525298;
 }
 .toggle-checkbox:checked + .toggle-label {
-  @apply: bg-green-400;
+  @apply bg-green-400;
   background-color: #525298;
 }
 
